Minimal Server Function

--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "ceaser-shifter",
-  "version": "1.0.0",
-  "description": "Homework for ELTE JavaScript Technologies",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Sch-Tomi/Ceaser-Shifter.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Sch-Tomi/Ceaser-Shifter/issues"
-  },
-  "homepage": "https://github.com/Sch-Tomi/Ceaser-Shifter#readme",
-  "dependencies": {
-    "express": "^4.15.3",
-    "vue": "^2.3.3"
-  }
+    "name": "ceaser-shifter",
+    "version": "1.0.0",
+    "description": "Homework for ELTE JavaScript Technologies",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+         "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Sch-Tomi/Ceaser-Shifter.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Sch-Tomi/Ceaser-Shifter/issues"
+    },
+    "homepage": "https://github.com/Sch-Tomi/Ceaser-Shifter#readme",
+    "dependencies": {
+        "express": "^4.15.3",
+        "vue": "^2.3.3"
+    }
 }
