--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Sch-Tomi/Ceaser-Shifter#readme",
   "dependencies": {
     "axios": "^0.16.1",
+    "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
     "express": "^4.15.3",
     "vue": "^2.3.3"
